--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <input type="password" name="" placeholder="Masukan Url">  
   <input type="text" name="" placeholder="Nickname Instagram">
   <input type="button" name="btn" id="btn" value="CEK STATUS SERVER">
-  <p><a  href="https://ikyoffc.github.io/iky.github.io/" </p>
+  <p><a  href="bit.ly/LagiLoadingBang" </p>
   <input type="button" name="btn" id="btn" value="Kirim">
 </form>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.4/dist/sweetalert2.all.min.js"></script>
